--- a/gb/20/3/13/n11939189.md
+++ b/gb/20/3/13/n11939189.md
@@ -48,7 +48,7 @@
 </p>
 <p>&nbsp;</p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">A message from <ahref="https://twitter.com/spidadmitchell?ref_src=twsrc%5Etfw">@spidadmitchell</a> <ahref="https://t.co/YtChd3eNng"></a><a href="https://d124e4v75n9sum.cloudfront.net/G4oiBS7wv"><img width="600" src="https://raw.githubusercontent.com/19920513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="YtChd3eNng</a></p>
+<p dir="ltr" lang="en">A message from <ahref="https://twitter.com/spidadmitchell?ref_src=twsrc%5Etfw">@spidadmitchell</a> <ahref="https://t.co/YtChd3eNng"></a><a href="https://dlph7fabhsbfp.cloudfront.net/A1diBS7wd"><img width="600" src="https://raw.githubusercontent.com/19920513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="YtChd3eNng</a></p>
 <p>— NBA (@NBA) <ahref="https://twitter.com/NBA/status/1238886687444471810?ref_src=twsrc%5Etfw">March 14, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>&nbsp;</p>
@@ -77,7 +77,7 @@
 </p>
 <p>&nbsp;</p>
 <blockquote class="twitter-tweet">
-<p dir="ltr" lang="en">Madrid lockdown latest: At 10pm there was a citywide ovation for the health workers on the front line of this. Here’s how it sounded on our block. <ahref="https://t.co/Vvik9KMvWh"></a><a href="https://d124e4v75n9sum.cloudfront.net/G4oiBS7wv"><img width="600" src="https://raw.githubusercontent.com/19920513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="Vvik9KMvWh</a></p>
+<p dir="ltr" lang="en">Madrid lockdown latest: At 10pm there was a citywide ovation for the health workers on the front line of this. Here’s how it sounded on our block. <ahref="https://t.co/Vvik9KMvWh"></a><a href="https://dlph7fabhsbfp.cloudfront.net/A1diBS7wd"><img width="600" src="https://raw.githubusercontent.com/19920513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="Vvik9KMvWh</a></p>
 <p>— Stephen Phelan (@hyperphelan) <ahref="https://twitter.com/hyperphelan/status/1238934238453534720?ref_src=twsrc%5Etfw">March 14, 2020</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a>
 <p>&nbsp;</p>
@@ -458,7 +458,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/20/n10498992.md#1" target="_blank">裴毅然：再说“四?一二”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10697882.md#1" target="_blank">这些患绝症的精英们何以逢生（2）</a></li><hr>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010874.md#1" target="_blank">共产暴政录：计划生育是毁我中华的屠婴战争（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/31/n10103847.md#1" target="_blank">老伴绝处逢生 八旬警察举杯感恩</a></li><hr>
 
 
 <strong>热门新闻：</strong>
