--- a/gb/22/10/31/n13856678.md
+++ b/gb/22/10/31/n13856678.md
@@ -54,31 +54,25 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/13/n10054247.md#1" target="_blank">杨宁：不容粉饰 巴金季羡林韦君宜痛批文革</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/15/n9959300.md#1" target="_blank">文革中自杀的几个名人（4）史学家翦伯赞</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11178933.md#1" target="_blank">亚利桑那媒体：中共强摘器官对美国有何影响</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13891849.md#1">【未解之谜】预言家珍妮之一 肯尼迪家族的“诅咒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896430.md#1">【十字路口】传中共放“阳”出国 让大疫重演？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896482.md#1">【未解之谜】憋了很久 一定要说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896520.md#1">【时事人物】风投神话破灭 孙正义退场之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896554.md#1">冯小刚：在国外三个多月没阳 回国十来天阳了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896032.md#1">【一线采访】河北疫情雪崩 医院接近崩溃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895920.md#1">学者：疫情大爆发 中国两种声音激烈较量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896835.md#1">台娱圈新年首发喜弹 翁立友“已登记”不宴客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897308.md#1">蒙古族歌王拉苏荣病亡 曾多次为中共党魁演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896444.md#1">李钟硕与IU公开恋情 已交往4个多月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895820.md#1">周晓涵要求打戏来真的 曝陈亚兰不照剧本演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895784.md#1">弥补获奖感言遗憾 汤唯隔空感谢丈夫和女儿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896498.md#1">党媒终于承认染疫后遗症 心肌炎多发于中青年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895971.md#1">【车评】比电动车更实用 2022 Lexus NX 450h+ F Sport Handling AWD</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894557.md#1">冬季心血管疾病风险大增 医生教你如何预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897182.md#1">新年伊始 世界各地有哪些奇特的传统？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/20/n13888098.md#1">人际关系的隐形力量 “信任”是最重要因素</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/23/n11967780.md#1">【新闻看点】川习对话说啥 红二代倒戈习危急？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/23/n11968139.md#1">马列教授千里散毒？意首例确诊病例身份曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/24/n11970524.md#1">台湾目前有4万多居家检疫者 双北市占近半数</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/24/n11970106.md#1">北市寻陈先生 北京返台失联 手机空号留假地址</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/14/n11939926.md#1">现世报：危机窥伺中得恩报 毫无预警下遭恶报</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/31/n13856678.htm">大连法轮功学员刘红霞病危 法院拒保外就医申请</a></p><hr>
