--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -121,7 +121,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/7/n10834918.md#1" target="_blank">曾伯炎：杀母红卫兵孔繁路的悲剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280714.md#1" target="_blank">女裁缝的别样生意经</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/27/n10670499.md#1" target="_blank">林辉：但愿来生不姓“胡”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/23/n3784118.md#1" target="_blank">他山：中共政法委的罪恶与政法系统人员的赎罪</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
