--- a/gb/23/1/2/n13897908.md
+++ b/gb/23/1/2/n13897908.md
@@ -30,31 +30,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/4/n11843021.md#1">武汉瘟疫治寻根  历史天象醒今人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280714.md#1" target="_blank">女裁缝的别样生意经</a></li>
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/1/n10014980.md#1" target="_blank">林辉：文革荒诞事 误损毛像引出大祸端</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943724.md#1">妙不可言的舞剧《草船借箭》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944812.md#1">柳夫人天赋异禀知天命 功夫奇特一人胜千军</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950265.md#1">【军事热点】俄军陷停滞 内讧和失控笼罩莫斯科</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950199.md#1">【探索时分】为何俄罗斯间谍卫星毫无作用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950249.md#1">【中国禁闻】李强首秀答十问 张口必提习近平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948884.md#1">【翻墙必看】分析：谁投了李强的反对票</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948769.md#1">梁朝伟亚洲电影大奖封帝 刘嘉玲打开名单惊呆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949642.md#1">赵薇遭封杀一年半 47岁生日自拍照显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948798.md#1">“什么戏都想演” 洪金宝叹演动作片难糊口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948969.md#1">奥斯卡获奖名单揭晓 杨紫琼成首位亚裔影后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949469.md#1">2月份美国房市 拐点出现！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948420.md#1">退休的最大挑战是什么？哈佛85年研究释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945694.md#1">保持大脑敏锐 胡萝卜不可忽视的6大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943660.md#1">干细胞模型揭示青光眼治疗的秘密</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064023.md#1">古埃及《托特预言》：创世主末后救世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064392.md#1">研究5000例濒死体验 美国医生相信人有轮回</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063481.md#1">日本礼法之形成与社会功能</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065901.md#1">【环球直击】中国全民抓间谍《反间谍条例》上路</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14066016.md#1">【新闻五人行】习步步惊心 亡党十大败相齐了</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065310.md#1">【中国禁闻】新版地图惹众怒 中共拉拢邻国企图落空</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065150.md#1">李克强游敦煌莫高窟视频热传 引热议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064949.md#1">涿州洪水中驻军部队坦克飞机被毁 无人担责</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064914.md#1">捷克国家银行出清所有人民币资产</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064909.md#1">大马监制李建兴证实《好声音》导师转身价码</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064934.md#1">任威尼斯影展评审 舒淇惊艳亮相开幕式红毯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064864.md#1">宋祖儿遭实名举报逃税？名下多家公司已注销</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065521.md#1">逃税传闻发酵 宋祖儿遭5大卫视官微删除内容</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064623.md#1">胡宇威与陈庭妮7月已在美国登记结婚</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063325.md#1">不可错过的热带水果——奇异、营养又美味的菠萝蜜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065173.md#1">什么是“弃程”？ 为何这招能省机票费用？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064562.md#1">花椰菜上有黑色斑点 吃起来安全吗？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065711.md#1">加州空军基地周边农地 为何被秘密收购？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059859.md#1">失眠易致失智肥胖 中医5方法改善 独创颈椎疗法</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/2/n13897908.htm">台商曝中国昆山吴江疫情惨烈 只好提前放假</a></p><hr>
